java/java-tests/testData/codeInsight/daemonCodeAnalyzer/genericsHighlighting8/TypeParamsCyclicInference.java
class Test<<error descr="Cyclic inheritance involving 'T'"></error>T extends T> {}
class Test1<<error descr="Cyclic inheritance involving 'T'"></error>T extends S, S extends T> {}
